Renamed css classes. Fixed spacing on table headers. Added smiley placer for cat logo.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -244,7 +244,7 @@ html,body{
 	font-size: 85%;
 }
 
-.tableCellWidth {
+.tableCellButton {
   padding: 1em;
   background-color: white;
   border: 1px solid #BDBDBD;
@@ -257,7 +257,7 @@ html,body{
   box-shadow: 0 1px 0 0 #BDBDBD;
 }
 
-.ingredientTable {
+.ingredientUL {
 	height: 80%;
   width: 100%;
 	overflow-y: scroll;
@@ -301,7 +301,7 @@ table {
   overflow-x: scroll;
 }
 
-.littleBreadcrumbs {
+.breadcrumbsUL {
   position: relative;
   color: #616161;
   font-size: 80%;
